# geomcore

./: AUTHORS  CMakeLists.txt  COPYING  HACKING  INSTALL  NEWS  README  TODO
CMake/: FindBRLCAD.cmake  FindCPPUNIT.cmake  FindCppUnit.cmake  FindLIBGE.cmake  FindSVNLIBS.cmake  FindTCL.cmake  PreprocessorUtils.cmake
cmake/: FindBRLCAD.cmake
doc/: CMakeLists.txt  URL_URI_URN
doc/docbook/: CMakeLists.txt  README
doc/doxygen/: CMakeLists.txt  Doxyfile.in
geomserv_boost/: CMakeLists.txt  README
geomserv_boost/src/: CMakeLists.txt
geomserv_boost/src/client/: CMakeLists.txt  gstestclient.c
geomserv_boost/src/client/asio_protobuf_sample/: CMakeLists.txt  client.cpp  packedmessage.h
geomserv_boost/src/other/: CMakeLists.txt
geomserv_boost/src/other/glog/: CMakeLists.txt
geomserv_boost/src/other/glog/src/: CMakeLists.txt  config_cmake.h.in
geomserv_boost/src/other/glog/src/glog/: logging.h.in
geomserv_boost/src/other/protobuf/: CMakeLists.txt  config_cmake.h.in
geomserv_boost/src/other/protobuf/CMake/: CheckHashMap.cmake
geomserv_boost/src/other/protobuf/src/: CMakeLists.txt
geomserv_boost/src/server/: CMakeLists.txt
geomserv_boost/src/server/asio_protobuf_sample/: CMakeLists.txt  server_main.cpp
geomserv_boost/src/server/server3/: CMakeLists.txt
include/: AbstractClientCmd.h  AbstractJob.h  Account.h  AccountManager.h  AppLauncher.h  BaseApp.h  BrlcadDb.h  ByteArray.h  ByteBuffer.h  ClientCmdRegistry.h  Config.h  ControlledThread.h  DataManager.h  DataStream.h  DataStreamUtils.h  DbObject.h  DirListReqMsg.h  DirListResMsg.h  Event.h  EventManager.h  EventPublisher.h  EventSubscriber.h  ExitCmd.h  ExtObject.h  FailureMsg.h  FileDataSource.h  GSClient.h  GSCmdLineClient.h  GSException.h  GSThread.h  GSUuid.h  GenericEightBytesMsg.h  GenericFourBytesMsg.h  GenericMultiByteMsg.h  GenericOneByteMsg.h  GenericOneStringMsg.h  GenericTwoBytesMsg.h  GeometryBoTReqMsg.h  GeometryChunkMsg.h  GeometryManifestMsg.h  (+44 more)
include/brlcad/: Arb8.h  Combination.h  Cone.h  ConstDatabase.h  Database.h  Ellipsoid.h  EllipticalTorus.h  FileDatabase.h  Halfspace.h  HyperbolicCylinder.h  Hyperboloid.h  Object.h  (+8 more)
src/: CMakeLists.txt
src/GE/: CMakeLists.txt
src/GE/coreInterface/: CMakeLists.txt
src/GS/: Account.cxx  AccountManager.cxx  BrlcadDb.cxx  CMakeLists.txt  DataManager.cxx  DbObject.cxx  DbObjectManifest.cxx  DbObjectManifest.h  ExtObject.cxx  FileDataSource.cxx  GSClient.cxx  GSCmdLineClient.cxx  GeometryProcessor.cxx  GeometryProcessor.h  GeometryService.cxx  Session.cxx  SessionManager.cxx  SvnDataSource.cxx  geoclient.cxx  geomclient.cxx  geomserv.config  geomserv.cxx  geoserv.cxx
src/GS/cmds/: AbstractClientCmd.cxx  ClientCmdRegistry.cxx  ExitCmd.cxx  GetCmd.cxx  HelpCmd.cxx  ListCmd.cxx  LoginCmd.cxx  LogoutCmd.cxx  PingCmd.cxx  ShutdownCmd.cxx
src/GS/testclient/: CMakeLists.txt  gstestclient.c
src/GS/testclient/CMake/: FindBRLCAD.cmake  FindTCL.cmake
src/libEvent/: CMakeLists.txt  Event.cxx  EventManager.cxx  EventPublisher.cxx  EventSubscriber.cxx  EventSubscription.cxx  EventSubscription.h  SubmitEventJob.h
src/libJob/: AbstractJob.cxx  CMakeLists.txt  JobManager.cxx  JobScheduler.cxx  JobWorker.cxx  JobWorker.h
src/libNet/: CMakeLists.txt  MakeAndRouteMsgJob.cxx  NetMsgFactory.cxx  NetMsgRouter.cxx  Portal.cxx  PortalManager.cxx
src/libNet/netMsg/: DirListReqMsg.cxx  DirListResMsg.cxx  FailureMsg.cxx  GenericEightBytesMsg.cxx  GenericFourBytesMsg.cxx  GenericMultiByteMsg.cxx  GenericOneByteMsg.cxx  GenericOneStringMsg.cxx  GenericTwoBytesMsg.cxx  GeometryBoTReqMsg.cxx  GeometryChunkMsg.cxx  GeometryManifestMsg.cxx  GeometryReqMsg.cxx  NetMsg.cxx  NewNodeOnNetMsg.cxx  NewSessionReqMsg.cxx  PingMsg.cxx  PongMsg.cxx  RemoteNodenameSetMsg.cxx  SessionInfoMsg.cxx  SuccessMsg.cxx  TypeOnlyMsg.cxx
src/libPkgCpp/: CMakeLists.txt  PkgClient.cxx  PkgServer.cxx  PkgTcpClient.cxx  PkgTcpServer.cxx  PkgUdpClient.cxx  PkgUdpServer.cxx
src/libgeomsvn/: CMakeLists.txt  breakout.c  geomsvn.h  repo.c
src/libgvm/: CMakeLists.txt  TODO  files.c  geomsvn.h  gvm.h  gvm_svn.h  mem.c  models.c  objects.c  repo.c
src/other/sqlite/: CMakeLists.txt
src/other/uuid/: CMakeLists.txt  config_cmake.h.in  uuid_ac.h  uuid_str.c
src/utility/: ByteArray.cxx  ByteBuffer.cxx  CMakeLists.txt  Config.cxx  ControlledThread.cxx  DataStream.cxx  DataStreamUtils.cxx  GSException.cxx  GSThread.cxx  GSUuid.cxx  Logger.cxx  StringUtils.cxx  StringUtils.h  Timer.h
tests/: CMakeLists.txt
tests/GE/: CMakeLists.txt
tests/GS/: CMakeLists.txt  FileDataSourceTest.cxx  GeometryServiceTest.cxx
tests/func/: CMakeLists.txt
tests/func/GE/: CMakeLists.txt  GeometryEngineTest.cxx
tests/func/GS/: CMakeLists.txt  FileDataSourceTest.cxx  GeometryServiceTest.cxx  SimpleCoreInterfaceTest.cxx
tests/func/gvmtest/: CMakeLists.txt  main.c
tests/func/libEvent/: BasicEventTest.cxx  CMakeLists.txt
tests/func/libJob/: BasicJMTest.cxx  CMakeLists.txt  PrintToStdOutJob.cxx  PrintToStdOutJob.h
tests/func/libNet/: CMakeLists.txt  NetPortalManagerTester.cxx  NetPortalManagerTester.h  libNetTest.cxx  netMsgSerialTest.cxx
tests/func/libpkgcpp/: CMakeLists.txt  pkgcppTest.cxx
tests/func/svntest/: CMakeLists.txt  main.c
tests/func/utility/: CMakeLists.txt  StringUtilsTest.cxx  configTest.cxx  loggerTest.cxx  threadTest.cxx  uuidTest.cxx
tests/libEvent/: BasicEventTest.cxx  CMakeLists.txt
tests/libJob/: BasicJMTest.cxx  CMakeLists.txt  PrintToStdOutJob.cxx  PrintToStdOutJob.h
tests/libNet/: CMakeLists.txt  NetPortalManagerTester.cxx  PrintingMsgHandler.h  libNetTest.cxx  netMsgSerialTest.cxx
tests/libpkgcpp/: CMakeLists.txt  pkgcppTest.cxx
tests/svntest/: CMakeLists.txt  main.c
tests/unit/: CMakeLists.txt  test_runner.cxx
tests/unit/libnet/: GeometryManifestMsgUTest.cxx  GeometryReqMsgUTest.cxx  NetMsgUTest.cxx  NetMsgUTest.h  NetMsgsUTest.cxx  NetMsgsUTest.h  TypeOnlyMsgUTest.cxx  TypeOnlyMsgUTest.h
tests/unit/utility/: ByteBufferUTest.cxx  ByteBufferUTest.h  StringUtilsUTest.cxx
tests/utility/: CMakeLists.txt  configTest.cxx  loggerTest.cxx  threadTest.cxx  uuidTest.cxx
(+105 files in other folders)
