FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
	SET(CMAKE_GEOMCORE_DOXYGEN_INPUT_LIST
		"${CMAKE_CURRENT_SOURCE_DIR}/../../src	${CMAKE_CURRENT_SOURCE_DIR}/../../include")
	SET(CMAKE_GEOMCORE_DOXYGEN_EXCLUDE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/../../src/other")
	SET(CMAKE_GEOMCORE_DOXYGEN_IMAGE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/images")
	CONFIGURE_FILE(Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
	IF(BUILD_GEOMCORE_DOXYGEN)
		ADD_CUSTOM_TARGET(doxygen ALL
			${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
			DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
		INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION ${CMAKE_INSTALL_PREFIX}/doc/geomcore-${GEOMCORE_VERSION})
	ELSE(BUILD_GEOMCORE_DOXYGEN)
		ADD_CUSTOM_TARGET(doxygen
			${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
			DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
	ENDIF(BUILD_GEOMCORE_DOXYGEN)
ELSE(DOXYGEN_FOUND)
	IF(BUILD_GEOMCORE_DOXYGEN)
		MESSAGE(WARNING "Doxygen documentation build enabled but doxygen not found - disabling")
		SET(BUILD_GEOMCORE_DOXYGEN OFF CACHE BOOL "Build Doxygen documentation" FORCE)
	ENDIF(BUILD_GEOMCORE_DOXYGEN)
ENDIF(DOXYGEN_FOUND)
